# drf-api-permissions-postgres

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
api_v1/: urls.py
api_v1/items/: permissions.py  serializers.py  views.py
items/: admin.py  choices.py  models.py  tests.py  views.py
items/migrations/: 0001_initial.py  0002_auto_20200912_2145.py
server/: settings.py  urls.py
templates/: _base.html  home.html
templates/items/: home.html
templates/partials/: _navbar.html
templates/users/: login.html  logout.html  password.html  profile.html  register.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_date_of_birth.py  0003_auto_20200912_1920.py  0004_remove_customuser_date_of_birth.py
